# Rust-Web-App

./: Cargo.toml  README.md  bun.lockb  docker-compose.yaml  package.json
sql/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: main.rs
src/_tests/: model_db.rs  model_todo.rs
src/model/: db.rs  todo.rs
